@startuml
interface IGeneratorContext {
    LabOrder : ILabOrderInterface <<get>>
    Patient : PatientInterface <<get>>
    Logger : ConsoleLoggerInterface <<get>>
    Data : DataAccessInterface <<get>>
}
interface IGeneratorContext {
    <<new>> LabOrder : ILabOrderRWInterface <<get>>
}
interface IGeneratorContext {
    <<new>> LabOrder : ILabOrderInterfaceV2 <<get>>
}
interface IGeneratorContext {
    <<new>> LabOrder : ILabOrderInterfaceV3 <<get>>
}
interface IGeneratorContext {
    LabOrder : ILabOrderInterfaceV4NoInheritence <<get>>
    Vaccine : IVaccineInterface <<get>>
}
class GeneratorContext {
    + labOrder : ILabOrderInterface
    + patient : PatientInterface
    + logger : ConsoleLoggerInterface
    + data : DataAccessInterface
    + GeneratorContext(pLabOrder:ILabOrderInterface, pPatient:PatientInterface, plogger:ConsoleLoggerInterface, pdata:DataAccessInterface)
    - LabOrder : ILabOrderInterface <<get>>
    - Patient : PatientInterface <<get>>
    - Logger : ConsoleLoggerInterface <<get>>
    - Data : DataAccessInterface <<get>>
    + <<override>> CreateUsingData(data:DataBaseClass) : Ember.Scripting.GeneratorContext
    + <<override>> Downgrade() : Ember.Scripting.GeneratorContext
}
class GeneratorContext {
    + labOrder : ILabOrderRWInterface
    + patient : PatientInterface
    + logger : ConsoleLoggerInterface
    + data : DataAccessInterface
    + GeneratorContext(pLabOrder:ILabOrderRWInterface, pPatient:PatientInterface, plogger:ConsoleLoggerInterface, pdata:DataAccessInterface)
    + LabOrder : ILabOrderRWInterface <<get>>
    + Patient : PatientInterface <<get>>
    + Logger : ConsoleLoggerInterface <<get>>
    + Data : DataAccessInterface <<get>>
    - LabOrder : ILabOrderInterface <<get>>
    + <<override>> CreateUsingData(data:DataBaseClass) : Ember.Scripting.GeneratorContext
    + <<override>> Downgrade() : Ember.Scripting.GeneratorContext
}
class GeneratorContext {
    + labOrderV2 : ILabOrderInterfaceV2
    + <<new>> patient : PatientInterface
    + <<new>> logger : ConsoleLoggerInterface
    + <<new>> data : DataAccessInterface
    + GeneratorContext(pLabOrder:ILabOrderInterfaceV2, pPatient:PatientInterface, plogger:ConsoleLoggerInterface, pdata:DataAccessInterface)
    - LabOrder : ILabOrderInterfaceV2 <<get>>
    + <<override>> CreateUsingData(data:DataBaseClass) : Ember.Scripting.GeneratorContext
    + <<override>> Downgrade() : Ember.Scripting.GeneratorContext
}
class GeneratorContext {
    + labOrderV3 : ILabOrderInterfaceV3
    + <<new>> patient : PatientInterface
    + <<new>> logger : ConsoleLoggerInterface
    + <<new>> data : DataAccessInterface
    + GeneratorContext(pLabOrderV3:ILabOrderInterfaceV3, pPatient:PatientInterface, plogger:ConsoleLoggerInterface, pdata:DataAccessInterface)
    - LabOrder : ILabOrderInterfaceV3 <<get>>
    + <<override>> CreateUsingData(data:DataBaseClass) : Ember.Scripting.GeneratorContext
    + <<override>> Downgrade() : Ember.Scripting.GeneratorContext
}
class GeneratorContext {
    - LabOrder : ILabOrderInterfaceV4NoInheritence
    - Vaccine : IVaccineInterface
    + GeneratorContext(labOrder:ILabOrderInterfaceV4NoInheritence, vaccine:IVaccineInterface)
    - LabOrder : ILabOrderInterfaceV4NoInheritence <<get>>
    - Vaccine : IVaccineInterface <<get>>
    + <<override>> CreateUsingData(data:DataBaseClass) : Ember.Scripting.GeneratorContext
    + <<override>> Downgrade() : Ember.Scripting.GeneratorContext
}
IGeneratorBaseInterface <|-- IGeneratorContext
IGeneratorBaseInterface <|-- IGeneratorContext
@enduml
